--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,8 @@ services:
     tty: true
     #ポート番号の同期
     ports:
-      - "8000:8000"
+      - "5001:5000"
     #ディレクトリの同期
     volumes:
       - ./main/dir:/dir
-    networks:
-      - netowork
-
-networks:
-  netowork:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 192.168.2.0/24
-          gateway: 192.168.2.1
+    command: flask run --host=0.0.0.0
