--- a/main/vercel.json
+++ b/main/vercel.json
@@ -1,5 +1,11 @@
 {
     "version": 2,
+    "rewrites": [
+        { 
+            "source": "/dir/(.*)",
+            "destination": "/dir/index"
+        }
+    ],
     "builds": [
         {
             "src": "dir/main.py",
@@ -8,8 +14,8 @@
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "/api/main.py"
+            "src": "/dir/(.*)",
+            "dest": "/dir/main.py"
         }
     ]
 }
