--- a/main/vercel.json
+++ b/main/vercel.json
@@ -8,8 +8,13 @@
     ],
     "routes": [
         {
-            "src": "/dir/(.*)",
+            "src": "/(.*)",
             "dest": "/dir/main.py"
         }
-    ]
+    ],
+    "functions": {
+        "api/main.py": {
+            "maxDuration": 60
+        }
+    }
 }
